	- Call nano_disabled_msg() directly from the shortcut list
	  instead of inside the disabled functions. (David Benbennick)
	- Clarifications to comments explaining exactly what control
	  characters and escape sequences are supported. (DLR)
	- Disable "Where Is Next" in tiny mode. (DLR)
	- Added the ability to justify the entire file at once, which
	  Pico has via ^W^J.  Changes to do_justify(); new functions
	  do_justify_void() and do_full_justify(). (DLR)
	- Modify the justification algorithm to work the same way as in
	  the current version of Pico, i.e, add a space at the end of
	  each line of the justified paragraph except for the last one,
	  and if there was a space at the end of the last one, remove
	  it.  Changes to justify_format() and do_justify().  Note that
	  we can no longer reliably detect the first modified line in a
	  paragraph, since a line unmodified by justify_format() may get
	  a space tacked onto the end of it or removed from the end of
	  it later.  The entire original paragraph is now always backed
	  up, and justify_format() no longer has a non-modifying mode,
	  so it's now only called in backup_lines(). (DLR)
	- Wrap the long jump code in NANO_SMALL #ifdefs, since we only
	  use it if we're resizing the window, which is disabled when
	  NANO_SMALL is defined. (DLR)
	- Add smart home key option, accessible via -A/--smarthome on
	  the command line, "set smarthome" in the rcfile, and the
	  Meta-H toggle in the edit window.  Smart home works as
	  follows: When Home is pressed anywhere but at the very
	  beginning of non-whitespace characters on a line, the cursor
	  will jump to that beginning (either forwards or backwards).
	  If the cursor is already at that position, it will jump to the
	  true beginning of the line.  This option is disabled in tiny
	  mode.  Changes to do_home(), nanogetstr(), etc. (DLR;
	  suggested by Stephan T. Lavavej)
	- Minor tweaks to the punctuation in some statusbar messages.
	  (DLR)